# route_verbalization_fi

./: CMakeLists.txt  README.md  package.xml
include/route_verbalization/Verbalizers/: PlaceVerbalizer.h  RegionVerbalizer.h  Verbalizer.h  sentences.h
include/route_verbalization/mapManipulators/: MapDrawer.h  MapReader.h
launch/: test.launch
nodes/: allSentences.cpp  draw.cpp  tester.cpp  verbalize.cpp
src/Verbalizers/: PlaceVerbalizer.cpp  RegionVerbalizer.cpp  sentences.cpp
src/mapManipulators/: MapDrawer.cpp  MapReader.cpp
